push checkpoint 2 again

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
         <section class="column-1">
           <div class="column-1-container">
             <div class="row_1">
-                <img src="/assets/media/logo.png" alt="flex">
+                <img src="assets/media/logo.png" alt="flex">
                 <p>FLEX</p>
           </div>
             
@@ -55,21 +55,21 @@
             <div class="flex-gallery">
                 <div class="gallery-L">
                     <div>
-                        <img src="/assets/media/gallery/01.jpg" alt="Image 1">
-                        <img src="/assets/media/gallery/02.jpg" alt="Image 2">
-                        <img src="/assets/media/gallery/03.jpg" alt="Image 3">
-                        <img src="/assets/media/gallery/04.jpg" alt="Image 4">
-                        <img src="/assets/media/gallery/05.jpg" alt="Image 5">
+                        <img src="assets/media/gallery/01.jpg" alt="Image 1">
+                        <img src="assets/media/gallery/02.jpg" alt="Image 2">
+                        <img src="assets/media/gallery/03.jpg" alt="Image 3">
+                        <img src="assets/media/gallery/04.jpg" alt="Image 4">
+                        <img src="assets/media/gallery/05.jpg" alt="Image 5">
                     </div>
                 </div>
                 
                 <div class="gallery-R">
                     <div>
-                        <img src="/assets/media/gallery/06.jpg" alt="Image 6">
-                        <img src="/assets/media/gallery/07.jpg" alt="Image 7">
-                        <img src="/assets/media/gallery/08.jpg" alt="Image 8">
-                        <img src="/assets/media/gallery/09.jpg" alt="Image 9">
-                        <img src="/assets/media/gallery/10.jpg" alt="Image 10">
+                        <img src="assets/media/gallery/06.jpg" alt="Image 6">
+                        <img src="assets/media/gallery/07.jpg" alt="Image 7">
+                        <img src="assets/media/gallery/08.jpg" alt="Image 8">
+                        <img src="assets/media/gallery/09.jpg" alt="Image 9">
+                        <img src="assets/media/gallery/10.jpg" alt="Image 10">
                     </div>
                 </div>                
             </div>
